src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GL46_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GL46_StringErrorContext.class */
public final class GL46_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglMultiDrawArraysIndirectCount(IJJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glMultiDrawArraysIndirectCount(ILjava/nio/ByteBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glMultiDrawArraysIndirectCount(IJJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glMultiDrawArraysIndirectCount(ILjava/nio/IntBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("nglMultiDrawElementsIndirectCount(IIJJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glMultiDrawElementsIndirectCount(IILjava/nio/ByteBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glMultiDrawElementsIndirectCount(IIJJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glMultiDrawElementsIndirectCount(IILjava/nio/IntBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glPolygonOffsetClamp(FFF)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("nglSpecializeShader(IJIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glSpecializeShader(ILjava/nio/ByteBuffer;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glSpecializeShader(ILjava/lang/CharSequence;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glMultiDrawArraysIndirectCount(I[IJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glMultiDrawElementsIndirectCount(II[IJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glSpecializeShader(ILjava/nio/ByteBuffer;[I[I)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        methods.put("glSpecializeShader(ILjava/lang/CharSequence;[I[I)V", "net/labymod/core/laby3d/opengl/error/generated/GL46ErrorContext");
        return methods;
    }
}
